--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
          
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>I Code You</title>
+        <title>404 Page not found</title>
         <style>
 
     html body {
@@ -75,7 +75,7 @@
 
                 <div class="navbar-header">
 
-                    <a class="navbar-brand visible-xs" href="#">I Code You</a>
+                    <a class="navbar-brand visible-xs" href="#">404 Page not found</a>
 
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
@@ -124,9 +124,9 @@
 
     <div class="intro">
 
-        <h1>I Code You</h1>
+        <h1>¯\_(ツ)_/¯</h1>
 
-        <h2>Like I ❤ You</h2>
+        <h2>Page not found</h2>
 
     </div>
 
